fix issue with z-index and transitions

--- a/src/scss/_loading.scss
+++ b/src/scss/_loading.scss
@@ -11,9 +11,10 @@
   z-index: 1;
   opacity: 1;
   overflow: hidden;
-  @include transition(all 0.5s ease);
+  @include transition(opacity 0.5s ease, z-index 1.5s ease);
   &.hidden {
     opacity: 0;
+    z-index: -1;
   }
   .loading-icon {  
     width: 50px;
